<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/upcomingHeaderItemHolder"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/white"
        app:cardElevation="12dp"
        android:layout_margin="16dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/launchesImageView"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_margin="10dp"
                android:layout_weight="2"
                app:srcCompat="@drawable/crs2_logo" />

            <LinearLayout
                android:id="@+id/launcherTextHolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/LaunchesTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launch_title"
                    android:textColor="@color/red"
                    android:paddingVertical="4dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/launchesRocketNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starlink_title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:paddingVertical="4dp"/>

                <TextView
                    android:id="@+id/launchesRocketSeriesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/series_number"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:paddingVertical="4dp"/>

                <TextView
                    android:id="@+id/launchesDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/gray"
                    android:textSize="12sp"
                    android:paddingTop="4dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_date"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ld_desc"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_site"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ls_desc"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_down"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cd_desc"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>